# Smugmug_Downloader

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.jules/: sentinel.md
features/: api_resilience.feature  authentication.feature  cli_workflows.feature  concurrency.feature  download_tracking.feature  integrity.feature
smugmug_downloader/: __init__.py  api_client.py  auth.py  cli.py  config.py  downloader.py  tracker.py
src/: api_client.py  auth.py  cli.py  config.py  downloader.py  tracker.py
tests/: test_api_client.py  test_downloader.py  test_security_fix.py  test_tracker.py
tests/step_defs/: test_api_steps.py  test_authentication_steps.py  test_cli_steps.py  test_concurrency_steps.py  test_integrity_steps.py  test_tracking_steps.py
